test/bad/25.zlus
(*
  A derivative must only change at discrete instants
*)


let hybrid main(i) = o where
  rec der o = 1.0 and o = 2.0
